--- a/index.html
+++ b/index.html
@@ -186,12 +186,14 @@
                 </div>
             </div>
         </nav>
+        
         <div class="mt-auto text-center text-xs text-slate-400">Version 1.3.3</div>
+        <div class="mt-auto text-center text-xs text-slate-300">All rights reserved © 2025 | ALPCG | Fahad Bin Mamun</div>
     </aside>
 
     <header id="app-header">
         <button id="menu-button" class="p-2"><i data-feather="menu" class="w-6 h-6"></i></button>
-        <div id="header-title" class="text-center"><h1 class="text-xl font-bold">Quiz Competition</h1></div>
+        <div id="header-title" class="text-center"><h1 class="text-xl font-bold">OKGS Quiz Competition</h1></div>
         <div class="w-10"></div>
     </header>
     
