--- a/index.html
+++ b/index.html
@@ -187,8 +187,7 @@
             </div>
         </nav>
         
-        <div class="mt-auto text-center text-xs text-slate-400">Version 1.3.3</div>
-        <div class="mt-auto text-center text-xs text-slate-300">All rights reserved © 2025 | ALPCG | Fahad Bin Mamun</div>
+        <div class="mt-auto text-center text-xs text-slate-300">Version 1.3.3<br>All rights reserved © 2025 | ALPCG | Fahad Bin Mamun</div>
     </aside>
 
     <header id="app-header">
@@ -322,7 +321,7 @@
             // --- Configuration & State ---
             const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyVc14S-p_hfbFMBa3-yLBjUQqbwfprgx-j9bEBAiVM7WP1sVMrcDzEkr5BvM8-AZXi/exec';
             const QUESTIONS_PER_QUIZ = 20;
-            const TIME_PER_QUESTION = 35;
+            const TIME_PER_QUESTION = 25;
             const FEEDBACK_DELAY_MS = 1500;
             let studentInfo = {}, timerInterval, submittedAnswers = [], allQuestions = [], currentQuizQuestions = [], currentQuestionIndex = 0, score = 0;
 
